transaction enhancements
